complete fixing
